--- a/mmain/templates/base.html
+++ b/mmain/templates/base.html
@@ -1,14 +1,76 @@
 {% load staticfiles %}
 <!DOCTYPE html>  
 <html>  
-<head>  
-    <title>{% block title %}{% endblock %}</title>
-    <script src="{% static "js/jquery-1.11.3.min.js" %}"></script>  
-    <script src="{% static "js/bootstrap.min.js" %}"></script>  
-</head>  
+    <head>
+        <title>{% block title %}{% endblock %}</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+        <link rel="stylesheet" href="{% static 'assets/css/main.css' %}" />
+        <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+        <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+    </head>  
+ 
 <!-- we are in cereal_list.html -->  
-    <body>
-        {% block body %}
-        {% endblock %}
+    <body class="{% block body-class %}{% endblock body-class %}">
+        <div id="page-wrapper">
+        <!-- Header -->
+                <header id="header">
+                    <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+                    <nav id="nav">
+                        <ul>
+                            <li class="current"><a href="{% url 'cereal_list' %}">Welcome</a></li>
+                            <li class="submenu">
+                                <a href="#">Navigate</a>
+                                <ul>
+                                    <li><a href="{% url 'cereal_list' %}">Cereal List</a></li>
+                                    <li><a href="{% url 'manufacturer_list' %}">Manufacturer List</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                </ul>
+                            </li>
+                            {% if request.user.is_authenticated %}
+                                <li><a href="{% url 'logout_user' %}?next={{request.path}}" class="button special">Log out {{request.user}}</a></li>
+                            {% else %}
+                                <li><a href="{% url 'login_user' %}?next={{request.path}}" class="button special">Log in</a></li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+                </header>
+
+
+
+
+            {% block body-main %}
+            {% endblock %}
+
+            <!-- Footer -->
+                <footer id="footer">
+
+                    <ul class="icons">
+                        <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
+                        <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
+                        <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+                    </ul>
+
+                    <ul class="copyright">
+                        <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    </ul>
+
+                </footer>
+
+        </div>
+
+        <!-- Scripts -->
+            <script src="{% static 'assets/js/jquery.min.js' %}"></script>
+            <script src="{% static 'assets/js/jquery.dropotron.min.js' %}"></script>
+            <script src="{% static 'assets/js/jquery.scrolly.min.js' %}"></script>
+            <script src="{% static 'assets/js/jquery.scrollgress.min.js' %}"></script>
+            <script src="{% static 'assets/js/skel.min.js' %}"></script>
+            <script src="{% static 'assets/js/util.js' %}"></script>
+            <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+            <script src="{% static 'assets/js/main.js' %}"></script>
+
     </body>
-</html>  
+</html>
