--- a/mmain/templates/cereal_detail.html
+++ b/mmain/templates/cereal_detail.html
@@ -1,28 +1,75 @@
-<head>
-    <title>{{cereal}} Details</title>
-</head>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block title %}
+    {{cereal}} Details
+{% endblock title %}
+{% block body-class %}left-sidebar{% endblock body-class %}
 
-<h1>{{cereal}} Details</h1>
-{% if auth %}
-    <h2><a href="/create_cereal/{{cereal.pk}}/">Update cereal...</a>
-{% endif %}
+{% block body-main %}
+    <article id="main">
+        <header class="special container">
+            <span class="icon fa-laptop" id='search'></span>
+            <h2>Take a look at <strong>{{cereal}}</strong></h2>
+        </header>
 
 
-<h3>{{cereal}} is made by <a href="/manufacturer_detail/{{cereal.manufacturer.pk}}">{{cereal.manufacturer}}</a>.</h3>
-{% if cereal.cereal_type == 'C' %}
-    <h3>You eat this cereal with milk.</h3> 
-{% else %}
-    <h3>You should heat this cereal up!</h3>
-{% endif %}
-<h3>Per serving, this cereal has {{cereal.calories}} calories.</h3>
-<h3>It also contains {{cereal.fat}} grams of fat, and {{cereal.protein}} grams of protein.</h3>
-<h3>It contains {{cereal.dietary_fiber}} grams of fiber, and {{cereal.carbs}} grams of carbs.</h3>
-<h3>You should eat {{cereal.cups_per_serving}} cups for one serving, and the Serving Size Weight is {{cereal.serving_size_weight}}.</h3>
 
-{% if auth %}
-    <a href="/cereal_delete/{{cereal.pk}}">Delete this cereal</a><br>
+        <!-- One -->
 
-{% endif %}
+        <section class="wrapper style4 container">
 
-<a href="{% url "cereal_list" %}">Back to list!</a>
+            <div class="row 150%">
+                <div class="4u 12u(narrower)">
+
+                    <!-- Sidebar -->
+                        <div class="sidebar">
+                            <section>
+                                <header>
+                                    <h3>Made by <strong>{{cereal.manufacturer}}</strong></h3>
+                                </header>
+                                <p>Makes a total of {{number_of_cereals}} cereals</p>
+                                <footer>
+                                    <ul class="buttons">
+                                        <li><a href="{% url 'manufacturer_detail' cereal.manufacturer.pk %}" class="button small">Check it out</a></li>
+                                    </ul>
+                                </footer>
+                            </section>
+                            <hr>
+                            {% if auth %}
+                                <p><a href="/update_cereal/{{cereal.pk}}/">Update cereal...</a><br>
+                                <a href="/cereal_delete/{{cereal.pk}}">Delete this cereal</a></p><br>
+                            {% endif %}
+                        </div>
+
+                </div>
+                <div class="8u 12u(narrower) important(narrower)">
+
+                    <!-- Content -->
+                        <div class="content">
+                            <section>
+                                {% comment %}
+                                    <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+                                {% endcomment %}
+                                
+                                
+                                <header>
+                                    <h2><strong>{{cereal}}</strong></h2>
+                                </header>
+                                <p>{% if cereal.cereal_type == 'C' %}You eat this cereal with milk.{% else %}You should heat this cereal up!{% endif %}</p>
+                                <p>Per serving, this cereal has {{cereal.calories}} calories. It also contains {{cereal.fat}} grams of fat, and {{cereal.protein}} grams of protein. It contains {{cereal.dietary_fiber}} grams of fiber, and {{cereal.carbs}} grams of carbs.</p>
+                                <p>You should eat {{cereal.cups_per_serving}} cups for one serving, and the Serving Size Weight is {{cereal.serving_size_weight}}.</p>
+                                <br>
+                                <a href="{% url 'cereal_list' %}" class="button small">Back to list!</a>
+
+                            </section>
+                        </div>
+
+                </div>
+            </div>
+        </section>
+
+    </article>
+{% endblock body-main %}
+
+
 
