--- a/mmain/templates/cereal_list.html
+++ b/mmain/templates/cereal_list.html
@@ -1,38 +1,72 @@
-<head>
-    <title>Cereal List</title>
-</head>
+{% extends "base.html" %}
+{% load staticfiles %}
+{% block title %}
+    Cereal List
+{% endblock title %}
 
-<h1>Cereal List</h1>
-<h2><a href="/manufacturer_list/">To manufacturer list</a></h2>
-<br>
-{% if request.user.is_authenticated %}
-    <strong>User logged in:</strong> {{request.user}}<br>
-    <a href="/logout/">Log out?</a>
-    <br>
-    <br>
-    <a href="/create_cereal/">Create a new cereal!</a>
+{% block body-class %}left-sidebar{% endblock body-class %}
 
-{% else %}
-    Please <a href="/login/">log in</a> to edit the cereal files!
-{% endif %}
 
-<form action="{% url 'cereal_list' %}" method="GET">
+{% block body-main %}
+    <article id="main">
+        <header class="special container">
+            <span class="icon fa-laptop" id='search'></span>
+            <h2>Behold the <strong>Cereals</strong></h2>
+            <p>Displaying all your favorite cereals... and some you've never heard of before!</p>
+        </header>
 
-        {{ form.as_p }}
 
-        <input type="submit" value="Search!">  
-    </form>
 
-<br>
-<pre>
-    {% if length != 0 %}
-        {% for cereal in cereals %}
-        <a href="/cereal_detail/{{cereal.pk}}/">{{cereal}}</a>, from {{cereal.manufacturer}}!
-        
-        {% endfor %}
-    {% else %}
-        No results found!
-    {% endif %}
-    
+    <!-- One -->
+        <section class="wrapper style4 container">
 
-</pre>
+            <div class="row 150%">
+                
+                <div class="3u 12u(narrower) important(narrower)">
+                    <div class="row">
+                        <div class="8u 10u(narrower)">
+                        
+                            <!-- Content -->
+                                <div class="sidebar">
+                                    <section>
+                                        <header>
+                                            <p> {% if request.user.is_authenticated %}{% else %}Please <a href="/login/" style="color: teal; font-weight: bold;">log in</a> to edit the cereal files!{% endif %}</p>
+                                        </header>
+
+                                        
+                                        <form action="/cereal_list/#search" method="GET">
+                                                {{ form.as_p }}
+                                                <input type="submit" value="Search!" class="button small">  
+                                        </form>
+                                        <br>
+                                        {% if request.user.is_authenticated %}
+                                            <a href="/create_cereal/">Create a new cereal!</a>
+                                        {% endif %}
+                                    </section>
+                                </div>
+                        </div>
+                    </div>
+
+                </div>
+                {% for cereal in cereals %}
+                    <div class="4u 12u(narrower)">
+                        <div class="content">
+                            <section>
+                                <header>
+                                    <h3><strong>{{cereal}}</strong></h3>
+                                </header>
+                                <p>Created by <a href="{% url 'manufacturer_detail' cereal.manufacturer.pk %}">{{cereal.manufacturer}}</a>. And only contains {{cereal.calories}} calories.</p>
+                                <footer>
+                                    <ul class="buttons">
+                                        <li><a href="{% url 'cereal_detail' cereal.pk %}" class="button small">Learn More</a></li>
+                                    </ul>
+                                </footer>
+                            </section>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </section>
+
+    </article>
+{% endblock body-main %}
