--- a/mmain/templates/manufacturer_list.html
+++ b/mmain/templates/manufacturer_list.html
@@ -22,7 +22,7 @@
 
             <div class="row 150%">
                 <div class="2u 12u(narrower) important(narrower)">
-                    <div class="sidebar" >
+                    <div class="sidebar" style=" text-align: center;">
                         <section>
                             <header>
                                     <p> {% if request.user.is_authenticated %}{% else %}Please <a href="/login/" style="color: teal; font-weight: bold;">log in</a> to edit the manufacturer files!{% endif %}</p>
@@ -31,7 +31,7 @@
                                 
                                 <form action="/manufacturer_list/#search" method="GET">
                                         {{ form.as_p }}
-                                        <input type="submit" value="Search!" class="button small" style="min-width: 60px; min-height: 25px; padding-left: 15px !important; padding-right: 15px">  
+                                        <input type="submit" value="Search!" class="button small" style="min-width: 60px; min-height: 25px; padding-left: 15px !important; padding-right: 15px;">  
                                 </form>
                                 <br>
                                 {% if request.user.is_authenticated %}
