aligned search center in cereal_list

--- a/mmain/templates/cereal_list.html
+++ b/mmain/templates/cereal_list.html
@@ -27,7 +27,7 @@
                         <div class="8u 10u(narrower)">
                         
                             <!-- Content -->
-                                <div class="sidebar">
+                                <div class="sidebar"  style=" text-align: center;">
                                     <section>
                                         <header>
                                             <p> {% if request.user.is_authenticated %}{% else %}Please <a href="/login/" style="color: teal; font-weight: bold;">log in</a> to edit the cereal files!{% endif %}</p>
