--- a/mmain/templates/20-contact.html
+++ b/mmain/templates/20-contact.html
@@ -61,7 +61,7 @@
 
 							<!-- Content -->
 								<div class="content">
-									<form>
+									<form action="{% url 'contact' method='POST' %}">
 										<div class="row 50%">
 											<div class="6u 12u(mobile)">
 												<input type="text" name="name" placeholder="Name" />
