--- a/mmain/templates/base.html
+++ b/mmain/templates/base.html
@@ -16,7 +16,7 @@
         <div id="page-wrapper">
         <!-- Header -->
                 <header id="header">
-                    <h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+                    <h1 id="logo"><a href="{% url 'home' %}">CEREALS <span>by coleclayman</span></a></h1>
                     <nav id="nav">
                         <ul>
                             <li class="current"><a href="{% url 'cereal_list' %}">Welcome</a></li>
@@ -25,7 +25,7 @@
                                 <ul>
                                     <li><a href="{% url 'cereal_list' %}">Cereal List</a></li>
                                     <li><a href="{% url 'manufacturer_list' %}">Manufacturer List</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="{% url 'contact' %}">Contact</a></li>
                                 </ul>
                             </li>
                             {% if request.user.is_authenticated %}
