--- a/mmain/templates/manufacturer_delete.html
+++ b/mmain/templates/manufacturer_delete.html
@@ -18,7 +18,7 @@
 
     <section class="wrapper style4 container">
 
-            <div class="row 150%">
+            <div class="row">
                 <div class="12u">
                     <form action="/manufacturer_delete/{{manufacturer.pk}}/" method="POST">
                         {% csrf_token %}
