--- a/mmain/templates/login.html
+++ b/mmain/templates/login.html
@@ -12,7 +12,7 @@
         </header>
     <section class="wrapper style4 container">
 
-            <div class="row 150%">
+            <div class="row">
                 <div class="12u 12u(narrower) important(narrower)">
                     <form action="" method="POST">
                         {% csrf_token %}
