--- a/mmain/templates/manufacturer_detail.html
+++ b/mmain/templates/manufacturer_detail.html
@@ -18,7 +18,7 @@
 
         <section class="wrapper style4 container">
 
-            <div class="row 150%">
+            <div class="row">
                 <div class="4u 12u(narrower)">
 
                     <!-- Sidebar -->
