--- a/mmain/templates/update_cereal.html
+++ b/mmain/templates/update_cereal.html
@@ -17,7 +17,7 @@
         </header>
         <section class="wrapper style4 container" >
 
-            <div class="row 150%">
+            <div class="row">
                 <div class="12u important(narrower)">
                     <section>
                             {% crispy form %} * = Required field
