made a home page and linked the other sites to there

--- a/mmain/templates/login.html
+++ b/mmain/templates/login.html
@@ -24,7 +24,7 @@
                     </br>
                     Not yet signed up? <a href="/signup/">Sign up here!</a>
                     <br>
-                    <a href="{% url 'cereal_list' %}">Back to home</a>
+                    <a href="{% url 'home' %}">Back to home</a>
                 </div>
             </div>
         </section>
