--- a/mmain/templates/base.html
+++ b/mmain/templates/base.html
@@ -19,7 +19,7 @@
                     <h1 id="logo"><a href="{% url 'home' %}">CEREALS <span>by coleclayman</span></a></h1>
                     <nav id="nav">
                         <ul>
-                            <li class="current"><a href="{% url 'cereal_list' %}">Welcome</a></li>
+                            <li class="current"><a href="{% url 'home' %}">Welcome</a></li>
                             <li class="submenu">
                                 <a href="#">Navigate</a>
                                 <ul>
@@ -47,7 +47,7 @@
                 <footer id="footer">
 
                     <ul class="icons">
-                        <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="http://twitter.com/coleclayman/" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
                         <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
                         <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
                         <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
@@ -55,7 +55,7 @@
                     </ul>
 
                     <ul class="copyright">
-                        <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                        <li>&copy; <a href="https://coleclayman.us">coleclayman</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
                     </ul>
 
                 </footer>
