Updated some links in the base and the message on my home page.

--- a/mmain/templates/home.html
+++ b/mmain/templates/home.html
@@ -21,7 +21,7 @@
                 <br />
                 devoted to our
                 <br />
-                favorite breakfast.</p>
+                favorite breakfast food.</p>
                 <footer>
                     <ul class="buttons vertical">
                         <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -37,14 +37,9 @@
 
             <header class="special container">
                 <span class="icon fa-bar-chart-o"></span>
-                <h2>So many things in life change - but something constant can be our choice in breakfast.
-                <br />
+                <h2> 
                 I made this so you can learn more about what you love: <strong>cereal</strong>.</h2>
-                <p>As you spend time perusing the site, search for your favorites, and look for new cereals made by 
-                <br />
-                the manufacturers of your top choices! You could find some hidden gems :)
-                <br />
-                See anything I need to add here? Any cereals I missed? Hit me up! I also love talking baseball. Enjoy!</p>
+                <p>They always say breakfast is the most important meal of the day - so you'll probably want to eat something that'll get you going on the right track! This site will help you in making the best decision for you! As you spend time perusing the site, search for your favorites, and look for new cereals made by the manufacturers of your top choices! You could find some hidden gems :) See anything I need to add here? Any cereals I missed? Hit me up! I also love talking baseball. Enjoy!</p>
             </header>
 
         </article>
